traces/bug_292.txt
#292
kv_engine/tests/testapp/testapp_getset.cc:233: error: Dead Store
  The value written to `&e2bigCount` (type `int`) is never used.

kv_engine/tests/testapp/testapp_getset.cc:233:5: Write of unused value
231.     }
232. 
233.     int e2bigCount = getResponseCount(cb::mcbp::Status::E2big);
         ^
234.     try {
235.         userConnection->mutate(document, Vbid(0), MutationType::Set);
